flaskblog/static/main.css
body {
  background: #fafafa;
  color: #333333;
  margin-top: 5rem;
}

.hero-section {
    position: relative;
    padding: 80px 0 120px 0;
}

h1, h2, h3, h4, h5, h6 {
  color: #444444;
  font-weight: 400;
}

.bg-steel {
  background-color: #5f788a;
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #ffffff;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.content-section {
  background: #ffffff;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.article-content {
  white-space: pre-line;
}

.article-img {
  height: 65px;
  width: 65px;
  margin-right: 16px;
}

.article-metadata {
  padding-bottom: 1px;
  margin-bottom: 4px;
  border-bottom: 1px solid #e3e3e3
}

.article-metadata a:hover {
  color: #333;
  text-decoration: none;
}

.article-svg {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}

.avatar-img-container {
  width: 30px;
  height: auto;
  display: inline-block;
}

.avatar-img {
  width: 100%;
  height: auto;
}

.avatar-header {
  margin-left: 4px;
}

.navbar-toggler {
  border: 0;
}

.nav-container-fluid {
  padding: 0;
}

.newpost {
  margin-right: 8px;
}

.userlink {
  padding-top: 0;
  padding-bottom: 0;
  vertical-align: middle;
}

.postlink {
  padding-top: 0;
  padding-bottom: 0;
  vertical-align: middle;
}

.mainlink {
  padding-top: 0;
  padding-bottom: 0;
  vertical-align: middle;
}

.btn-success {
  background-color: #28a745;
  border-color: #28a745;
  /*
  -webkit-box-shadow: 0 2px 6px 0 rgba(10,207,151,.5);
  box-shadow: 0 2px 6px 0 rgba(10,207,151,.5);
   */
}

@media only screen and (max-width: 767px) {
  .nav-dropdown {
    display: none;
  }
  .nav-dropdown-menu {
    display:block;
        position: static;
    float: none;
    width: auto;
    margin-top: 0;
    background-color: transparent;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
  .dropdown-item {
    color: rgba(255,255,255,1);
  }
  .dropdown-nav-bar {
    margin-right: 0px;
  }
  .hero-image {
    max-width: 75%;
  }
}

